--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "include": ["src", "types", "test"],
   "compilerOptions": {
-    "target": "es6",
+    "target": "esnext",
     "module": "esnext",
     "lib": ["dom", "esnext"],
     "importHelpers": true,
@@ -9,11 +9,11 @@
     "sourceMap": true,
     "rootDir": "./",
     "noImplicitAny": true,
-    "strict": true,
-    "strictFunctionTypes": true,
+    "strict": false,
+    "strictFunctionTypes": false,
     "strictPropertyInitialization": false,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
+    "noImplicitThis": false,
+    "alwaysStrict": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
