--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,11 @@
     "sourceMap": true,
     "rootDir": "./",
     "noImplicitAny": true,
-    "strict": false,
+    "strict": true,
     "strictFunctionTypes": false,
     "strictPropertyInitialization": false,
     "noImplicitThis": false,
-    "alwaysStrict": false,
+    "alwaysStrict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
