--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/mongodb": "^3.3.14",
     "bson": "^4.0.1",
     "mongodb": "^3.3.14",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "^8.6.1"
   }
 }
