this looks like it's not worth it

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,9 @@
     "rootDir": "./",
     "noImplicitAny": true,
     "strict": true,
-    "strictFunctionTypes": false,
+    "strictFunctionTypes": true,
     "strictPropertyInitialization": false,
-    "noImplicitThis": false,
+    "noImplicitThis": true,
     "alwaysStrict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
