--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@types/mongodb": "^3.3.14",
     "bson": "^4.0.1",
     "mongodb": "^3.3.14",
-    "reflect-metadata": "^0.1.13",
-    "ts-node": "^8.6.1"
+    "reflect-metadata": "^0.1.13"
   }
 }
