--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "version": "0.2.7",
+  "version": "0.4.0",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
+  "jest": {
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ]
+  },
   "scripts": {
     "start": "tsdx watch",
     "build": "tsdx build",
@@ -26,29 +31,21 @@
     "trailingComma": "es5"
   },
   "name": "uorm",
-  "description": "Typescript port of python uengine ORM library",
   "author": {
     "name": "Pavel Vorobyov",
     "email": "aquavitale@yandex.ru",
     "url": "https://github.com/viert"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/viert/uorm"
-  },
   "module": "dist/uorm.esm.js",
   "devDependencies": {
-    "@types/jest": "^24.0.25",
-    "husky": "^4.0.6",
-    "tsdx": "^0.12.1",
+    "@types/jest": "^25.1.0",
+    "husky": "^4.2.1",
+    "tsdx": "^0.12.3",
     "tslib": "^1.10.0",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.5"
   },
   "dependencies": {
-    "@types/bson": "^4.0.1",
-    "@types/mongodb": "^3.3.14",
-    "bson": "^4.0.1",
-    "mongodb": "^3.3.14",
-    "reflect-metadata": "^0.1.13"
+    "@types/mongodb": "^3.3.15",
+    "mongodb": "^3.5.2"
   }
 }
