--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.5.13",
+  "version": "0.6.0",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -45,7 +45,11 @@
     "typescript": "^3.7.5"
   },
   "dependencies": {
+    "@types/debug": "^4.1.5",
+    "@types/memcached": "^2.2.6",
     "@types/mongodb": "^3.3.15",
+    "debug": "^4.1.1",
+    "memcached": "^2.2.2",
     "mongodb": "^3.5.2",
     "regenerator-runtime": "^0.13.3"
   }
